CHANGES:

-------- version 0.3.2 (start)  -------------

23/5/2014
- create version 0.3.1 to be in correspondance with librevenge-0.0.0

13/5/2014
- add code to create embedded spreadsheet
- AppleWorks/ClarisWorks: send page's embedded spreadsheets as spreadsheet (instead of table) 

-------- version 0.3.1 (start)  -------------

16/3/2014
- GreatWorks: add a database parser which uses spreadsheet interface

8/3/2014
- BeagleWorks/WordPerfect Works: add a database parser which uses spreadsheet interface

4/3/2014
- MicrosoftWorks: add a database parser which uses spreadsheet interface

3/29/2014
- MicrosoftWorks: add a graphic parser(must find more document to improve it)

3/21/2014
- GreatWorks: replace the parser of vector graphic documents by a parser
  which generates graphic documents + correct to code to reconstruct arc/pie

3/19/2014
- BeagleWorks/WordPerfect Works: add parser of vector graphic documents

3/13/2014
- SuperPaint: add a parser of drawing SuperPaint v1 document

3/7/2014
- SuperPaint: add a parser of Paint SuperPaint v1 document

3/5/2014:
- AppleWorks/ClarisWorks: make the parser of the paint documents
   a parser which creates graphic (instead of a text document).
- MacPaint: add a parser of MacPaint document + move the code
   to parse GreatWorks v1 paint files (which have the same format)
   in this parser.
3/4/2014:
- GreatWorks: add parser of paint documents
3/3/2014:
- BeagleWorks/WordPerfect Work: add parser of paint documents
2/28/2014:
- transform MWAWGraphicListener into a listener able to export draw files

2/21/2014:
- Claris Resolve: add a spreadsheet parser (only export spreadsheet's content
  but not the frames)
- Claris Resolve/Wingz: try to decode encrypted files

2/14/2014:
- Wingz: add a spreadsheet parser (only export spreadsheet's content
  but not the frames)
- check that the output of the different executables are compatible with
  help2man --help-option=-h --version-option=-v --no-discard-stderr EXECUTABLE

2/2/2014: