@@ -753,7 +753,7 @@ bool ClarisWksDatabase::sendDatabase(int zId, MWAWListenerPtr listener)
       cell.setHAlignement(rec.m_hAlign);
       // change the reference date from 1/1/1904 to 1/1/1900
       if (rec.m_format.m_format==MWAWCell::F_DATE && rec.m_content.isValueSet())
-        rec.m_content.setValue(rec.m_content.m_value+1462);
+        rec.m_content.setValue(rec.m_content.m_value+1460);
       sheetListener->openSheetCell(cell, rec.m_content);
       if (rec.m_content.m_textEntry.valid()) {
         long fPos = input->tell();
