@@ -218,7 +218,7 @@ void FieldType::updateWithContent(Vec2i const &pos, MWAWCellContent const &conte
   }
   // change the reference date from 1/1/1904 to 1/1/1900
   if (format.m_format==MWAWCell::F_DATE && m_content.isValueSet())
-    m_content.setValue(m_content.m_value+1462.);
+    m_content.setValue(m_content.m_value+1460.);
   // and try to update the 1D formula in 2D
   std::vector<MWAWCellContent::FormulaInstruction> &formula=m_content.m_formula;
   for (size_t i=0; i<formula.size(); ++i) {
